Progress bar z-index fix

--- a/css/src/elements/custom-elements/single/_progress-bar.css
+++ b/css/src/elements/custom-elements/single/_progress-bar.css
@@ -6,6 +6,7 @@
     position: fixed;
     top: 0;
     width: auto;
+    z-index: 1000;
 
     .admin-bar & {
         top: 32px;
